--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on: push
 
 jobs:
   build:
-    mame: Hello World action
+    name: Hello World action
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
